--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.defaultInterpreterPath": "C:\\Users\\Aasis\\anaconda3\\python.exe"
+    "python.defaultInterpreterPath": "C:\\Users\\Nikesh\\anaconda3\\python.exe"
 }
